--- a/Hackathon_React/package.json
+++ b/Hackathon_React/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/nodemailer": "^6.4.17",
     "clsx": "^2.1.0",
+    "history": "^5.3.0",
     "html2pdf.js": "^0.10.1",
     "lucide-react": "^0.344.0",
     "nodemailer": "^6.10.0",
