--- a/backend/https/package.json
+++ b/backend/https/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "@repo/db": "*",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
